Add competencies API
